Fixed overflow styling

--- a/still-peter/src/app/globals.scss
+++ b/still-peter/src/app/globals.scss
@@ -126,17 +126,6 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
 }
 
-.display-grid-wrapper {
-  width: 100%;
-  background-color: $cp3-2;
-  grid-column: 2;
-}
-
-.display-grid-row-wrapper {
-  display: flex;
-  width: 100%;
-}
-
 .title-wrapper {
   display: flex;
   align-items: center;
@@ -150,7 +139,8 @@ input[type="number"]::-webkit-outer-spin-button {
   background-color: $cp3-2;
   color: $cp3-6;
   display: grid;
-  grid-template-rows: 40% 60%;
+  grid-template-rows: 35% 5% 60%;
+  height: 100%;
 }
 
 .display-square-wrapper {
@@ -164,7 +154,6 @@ input[type="number"]::-webkit-outer-spin-button {
   color: $cp3-6;
   border-radius: 0.3rem;
   border-width: 0.01rem;
-  padding: 0.2rem;
 }
 
 .square-wrapper {
@@ -216,19 +205,20 @@ input[type="number"]::-webkit-outer-spin-button {
 .add-patterns-text-wrapper {
   display: flex;
   justify-content: center;
-  // margin: 1rem;
+  margin: 1rem;
 }
 
 .patterns-wrapper {
   margin: 0rem 1rem;
-  overflow-y: scroll;
-  max-height: 100%;
+  overflow-y: auto;
+  height: 60vh;
+  // max-height: 100%;
 }
 
 .pattern-wrapper {
   display: grid;
   grid-template-columns: 60% 40%;
-  margin: 1rem 0.25rem;
+  margin: 0.6rem 0rem;
   gap: 0.5rem;
 }
 
@@ -240,7 +230,6 @@ input[type="number"]::-webkit-outer-spin-button {
 .pattern-button {
   width: 100%;
   grid-column: 1;
-  height: fit-content;
 }
 
 .pattern-display-wrapper {
@@ -249,7 +238,16 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .patterns-settings-wrapper {
-  height: 100%;
+  max-height: 65vh;
+}
+
+.display-grid-wrapper {
+  height: 3rem;
+  grid-column: 2;
+}
+
+.display-grid-row-wrapper {
+  display: flex;
 }
 
 .settings-big-wrapper {
